--- a/paper/Scat.ipynb
+++ b/paper/Scat.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: TkAgg\n"
+      "Using matplotlib backend: TkAgg\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "The line_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext line_profiler\n"
      ]
     }
    ],
@@ -28,26 +32,34 @@
     "import chip_scratch as cs\n",
     "%matplotlib\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "%load_ext line_profiler\n",
+    "import tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run simulator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "numLocations = 300\n",
-    "accessibility = cs.sampleAccessibility( 10, numSamples=numLocations )\n",
+    "accessibility = cs.sampleAccessibility( 1, numSamples=numLocations )\n",
     "accessibility.sort()\n",
     "accessibility = accessibility[::-1]\n",
-    "#accessibility = scipy.stats.beta.rvs( 0.5, 2, size=numLocations )\n",
     "pExt = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,11 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Could not find function 'ChipSeq.ChipSeq'.\n",
+      "NameError: name 'ChipSeq' is not defined\n"
+     ]
+    }
+   ],
    "source": [
-    "uniqueMat = cs.performChipSeq( chromAccessibility=accessibility, numCells=numCells, ampRatio=500, pExt=pExt, nReads=readsByCell )"
+    "#uniqueMat is a matrix of dimension (# cells x # locations)\n",
+    "%lprun -f ChipSeq.ChipSeq cs.performChipSeq( chromAccessibility=accessibility, numCells=numCells, ampRatio=500, pExt=pExt, nReads=readsByCell )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot posterior distributions of sc-ATAC read count data"
    ]
   },
   {
@@ -102,62 +131,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89c140877e0e470494922d1120301f12",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "array([0.30119421, 0.26359714])"
+       "HBox(children=(IntProgress(value=0, max=10000), HTML(value='')))"
       ]
      },
-     "execution_count": 66,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "accessibility[[70,90]]"
+    "popn = [20,205,5000,6000]\n",
+    "for i in tqdm.tnrange(10000):\n",
+    "    #samp1.append( cs.ChipSeq.hyperGeomSample( popn, 10 )[0] )\n",
+    "    cs.ChipSeq.hyperGeomSample2( popn, 10 )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.06284418786552902, 0.000572989231973922)"
+       "RanksumsResult(statistic=0.054324376950265, pvalue=0.95667672822853)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.stats.pearsonr( uniqueMat[:,70], uniqueMat[:,3] )"
+    "scipy.stats.ranksums( samp1, samp2 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc3e1fb3240>"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.Series( accessibility ).plot( kind='kde' )"
+    "?plt.hist"
    ]
   }
  ],
