--- a/paper/Manuscript.ipynb
+++ b/paper/Manuscript.ipynb
@@ -28,11 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-03T09:36:57.405723Z",
+     "start_time": "2019-01-03T09:36:57.289980Z"
+    },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: TkAgg\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib\n",
@@ -2214,8 +2228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 97,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-03T09:37:04.785213Z",
+     "start_time": "2019-01-03T09:37:04.643346Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tfList = [\"AFT1\", \"ALX3\", \"ALX4\", \"ARID3A\", \"ARID5A\", \"ARO80\", \"ARX\", \"ASCL2\", \"ASG1\", \"ATF1\", \"BAPX1\", \"BARHL1\", \"BARHL2\", \"BARX1\", \"BARX2\", \"BAS1\", \"BBX\", \"BCL6B\", \"BHLHB2\", \"BSX\", \"CART1\", \"CBF1\", \"CDX1\", \"CDX2\", \"CEH\", \"CEP3\", \"CHA4\", \"CPHX\", \"CRX\", \"CUP9\", \"CUTL1\", \"DBX1\", \"DBX2\", \"DLX1\", \"DLX2\", \"DLX3\", \"DLX4\", \"DLX5\", \"DMBX1\", \"DOBOX4\", \"DOBOX5\", \"DUXL\", \"E2F\", \"ECM22\", \"EGR1\", \"EHF\", \"ELF2\", \"ELF3\", \"ELF4\", \"ELF5\", \"ELK1\", \"ELK3\", \"ELK4\", \"EMX2\", \"EN1\", \"EN2\", \"EOMES\", \"ERG\", \"ESRRA\", \"ESX1\", \"ETS1\", \"ETV1\", \"ETV3\", \"ETV4\", \"ETV5\", \"ETV6\", \"EVX1\", \"EVX2\", \"FHL1\", \"FKH1\", \"FKH2\", \"FLI1\", \"FOXA2\", \"FOXJ1\", \"FOXJ3\", \"FOXK1\", \"FOXL1\", \"GABPA\", \"GAL4\", \"GAT1\", \"GAT3\", \"GAT4\", \"GATA3\", \"GATA5\", \"GATA6\", \"GBX1\", \"GBX2\", \"GCM1\", \"GCN4\", \"GLIS2\", \"GLN3\", \"GM397\", \"GM4881\", \"GM5454\", \"GMEB1\", \"GSC\", \"GSH2\", \"GSM1\", \"GZF3\", \"HAL9\", \"HBP1\", \"HDX\", \"HIC1\", \"HLH\", \"HLX1\", \"HLXB9\", \"HMBOX1\", \"HMX1\", \"HMX2\", \"HMX3\", \"HNF4A\", \"HOMEZ\", \"HOXA1\", \"HOXA10\", \"HOXA11\", \"HOXA13\", \"HOXA2\", \"HOXA3\", \"HOXA4\", \"HOXA5\", \"HOXA6\", \"HOXA7\", \"HOXA9\", \"HOXB13\", \"HOXB3\", \"HOXB4\", \"HOXB5\", \"HOXB6\", \"HOXB7\", \"HOXB8\", \"HOXB9\", \"HOXC10\", \"HOXC11\", \"HOXC12\", \"HOXC13\", \"HOXC4\", \"HOXC5\", \"HOXC6\", \"HOXC8\", \"HOXC9\", \"HOXD1\", \"HOXD10\", \"HOXD11\", \"HOXD12\", \"HOXD13\", \"HOXD3\", \"HOXD8\", \"IPF1\", \"IRC\", \"IRF3\", \"IRF4\", \"IRF5\", \"IRF6\", \"IRX2\", \"IRX3\", \"IRX4\", \"IRX5\", \"IRX6\", \"ISGF3G\", \"ISL2\", \"ISX\", \"JUNDM2\", \"KLF7\", \"LBX2\", \"LEF1\", \"LEU3\", \"LHX1\", \"LHX2\", \"LHX3\", \"LHX4\", \"LHX5\", \"LHX6\", \"LHX8\", \"LHX9\", \"LMX1A\", \"LMX1B\", \"LYS14\", \"MAFB\", \"MAFK\", \"MATALPHA2\", \"MAX\", \"MBP1\", \"MCM1\", \"MEIS1\", \"MEOX1\", \"MET32\", \"MGA1\", \"MIG1\", \"MIG2\", \"MIG3\", \"MRG1\", \"MRG2\", \"MSX1\", \"MSX2\", \"MSX3\", \"MTF1\", \"MXL\", \"MYB\", \"MYBL1\", \"MYF6\", \"NDT80\", \"NHP6A\", \"NHP6B\", \"NKX1\", \"NKX2\", \"NKX3\", \"NKX6\", \"NR2F\", \"NRG1\", \"NSY\", \"OAF1\", \"OBOX1\", \"OBOX2\", \"OBOX3\", \"OBOX5\", \"OBOX6\", \"OCT\", \"OG2X\", \"OSR1\", \"OSR2\", \"OTP\", \"OTX1\", \"OTX2\", \"PAX4\", \"PAX6\", \"PAX7\", \"PBF1\", \"PBF2\", \"PBX1\", \"PDR1\", \"PHD1\", \"PHO2\", \"PHO4\", \"PHOX2A\", \"PHOX2B\", \"PITX1\", \"PITX2\", \"PITX3\", \"PKNOX1\", \"PKNOX2\", \"PLAGL1\", \"POU1F\", \"POU2F\", \"POU3F\", \"POU4F\", \"POU6F\", \"PROP1\", \"PRRX1\", \"PRRX2\", \"PUT3\", \"RAP1\", \"RARA\", \"RAX\", \"RDR1\", \"RDS1\", \"RDS2\", \"REF\", \"RFX3\", \"RFX4\", \"RFXDC2\", \"RGT1\", \"RHOX11\", \"RHOX6\", \"RPH1\", \"RPN4\", \"RSC3\", \"RSC30\", \"RTG3\", \"RXRA\", \"SFL1\", \"SFP1\", \"SFPI1\", \"SHOX2\", \"SIP4\", \"SIX1\", \"SIX2\", \"SIX3\", \"SIX4\", \"SIX6\", \"SKN7\", \"SMAD3\", \"SMP1\", \"SOX1\", \"SOX11\", \"SOX12\", \"SOX13\", \"SOX14\", \"SOX15\", \"SOX17\", \"SOX18\", \"SOX21\", \"SOX30\", \"SOX4\", \"SOX5\", \"SOX7\", \"SOX8\", \"SP100\", \"SP4\", \"SPDEF\", \"SPIC\", \"SPT15\", \"SRD1\", \"SRF\", \"SRY\", \"STB3\", \"STP2\", \"STP4\", \"SUM1\", \"SUT2\", \"TBF1\", \"TBP\", \"TBS1\", \"TCF1\", \"TCF2\", \"TCF3\", \"TCF7\", \"TCF7L\", \"TCFAP2A\", \"TCFAP2B\", \"TCFAP2C\", \"TCFAP2E\", \"TCFE2A\", \"TEA1\", \"TEC1\", \"TGIF1\", \"TGIF2\", \"TITF1\", \"TLX2\", \"TYE7\", \"UME6\", \"UNCX4\", \"USV1\", \"VAX1\", \"VAX2\", \"VSX1\", \"XBP1\", \"YAP1\", \"YAP6\", \"YBR239C\", \"YDR520C\", \"YER130C\", \"YGR067C\", \"YKL222C\", \"YLL054C\", \"YML081W\", \"YNR063W\", \"YOX1\", \"YPR013C\", \"YPR015C\", \"YPR196W\", \"YRM1\", \"YRR1\", \"ZBTB12\", \"ZBTB3\", \"ZBTB7B\", \"ZFP105\", \"ZFP128\", \"ZFP161\", \"ZFP187\", \"ZFP281\", \"ZFP410\", \"ZFP691\", \"ZFP740\", \"ZIC1\", \"ZIC2\", \"ZIC3\", \"ZIF268\", \"ZSCAN4\"]\n",
@@ -2266,9 +2285,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 99,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-03T09:37:14.452105Z",
+     "start_time": "2019-01-03T09:37:14.357488Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-99-1257afce42ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0menergiesSampled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdistributions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtruncPowerLawRVs\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnumLocations\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m \u001b[0;36m4\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m \u001b[0msaveFile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m'data/klDistInfo.pickle'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "tfsSelected = finalTfList\n",
@@ -2322,7 +2358,6 @@
     "    energiesSampled = distributions.truncPowerLawRVs( 0.5, 0, 10, size=numLocations )\n",
     "\n",
     "4 + \"\"\n",
-    "saveFile = open( 'data/klDistInfo.pickle', 'wb' )\n",
     "        \n",
     "tfIdx = 0\n",
     "klDistInfo['energies' ] = energiesSampled\n",
@@ -2389,10 +2424,36 @@
     "                        widthIdx += 0\n",
     "                        \n",
     "                muIdx += 1\n",
+    "    saveFile = open( 'data/klDistInfo.pickle', 'wb' )\n",
     "    pickle.dump( klDistInfo, saveFile )\n",
+    "    saveFile.close()\n",
     "    tfIdx += 1\n",
-    "\n",
-    "saveFile.close()"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-03T09:37:34.086361Z",
+     "start_time": "2019-01-03T09:37:34.070284Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['defaultPext', 'energies', 'RFX3'])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "klDistInfo.keys()"
    ]
   }
  ],
